-add Redis support -add Slf4j support -N+1 problem has been solved for all requests